name:                openarms
version:             0.1.0.0
synopsis:            Web server for open arms ministry
description:         Tracker for attendees of open arms ministries
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           The New Com (c) 2016
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable web
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       aeson == 0.9.*
                     , base == 4.*
                     , bytestring
                     , configurator
                     , digestive-functors
                     , either == 4.4.*
                     , lucid
                     , monad-control
                     , mtl
                     , opaleye
                     , postgresql-simple
                     , scrypt
                     , email-validate
                     , servant
                     , servant-lucid
                     , servant-server
                     , text
                     , time == 1.5.*
                     , transformers
                     , transformers-base == 0.4.*
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010
