name:                openarms
version:             0.1.0.0
synopsis:            Web server for open arms ministry
description:         Tracker for attendees of open arms ministries
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           The New Com (c) 2016
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable web
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       HDBC-postgresql
                     , aeson
                     , base
                     , bytestring
                     , clientsession
                     , configurator
                     , cookie
                     , digestive-functors
                     , either == 4.4.*
                     , email-validate
                     , lucid
                     , monad-control
                     , mtl
                     , names-th == 0.1.*
                     , opaleye
                     , persistable-record
                     , relational-query-HDBC
                     , relational-record
                     , scrypt
                     , servant
                     , servant-server
                     , split
                     , template-haskell == 2.10.*
                     , text
                     , time
                     , transformers
                     , transformers-base
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010
